=======
CHANGES
=======

0.5.0 (unreleased)
------------------

- Change package's mailing list address to zope-dev at zope.org instead
  of the retired one.

0.4.0 (2009-01-31)
------------------

- `openDetached` is now protected by zope.View instead of zope.ManageContent.

- Use zope.container instead of zope.app.container.        

0.3.0 (2007-11-01)
------------------

- Package data update.

0.2.0 (2007-04-18)
------------------

- Fix code for Publisher version 3.4.

0.1.0 (2007-04-18)
------------------

- Initial release.